--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -31,41 +31,7 @@
             <div class="text-child">
                 <h2>Some blahs</h2>
 
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
-                <p>there's no difference between v1 and v2 lazer interface.
-                <p>both of them are meh.
-                <p>btw your table influence your acc 
+                <p>Lazer sucks
             </div>
         </div>
     </div>
