--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -18,20 +18,13 @@
             <div class="text-child">
                 <h2>Setup</h2>
 
-                <p>Mouse: Logitech G102;
-                <p>Keyboard: Sayo O2C;
-                <p>Resolution: 1920x1080, 15&quot;6;
-                <p>Typing: Alternate;
-                <p>Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">here</a>;
-                <p>Offset: +19.
-            </div>
-        </div>
-
-        <div class="text-group">
-            <div class="text-child">
-                <h2>Some blahs</h2>
-
-                <p>Lazer sucks
+                <p>M: Logitech G102;
+                <p>K: Sayo O2C;
+                <p>R: 1920x1080, 15&quot;6;
+                <p>T: Alternate;
+                <p>S: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">here</a>;
+                <p>O: +19.
+                <p>Version: 2025.424.0(version after that sucks)
             </div>
         </div>
     </div>
