--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -18,7 +18,7 @@
             <div class="text-child">
                 <h2>Setup</h2>
 
-                <p>Mouse: Logitech G102;
+                <p>Mouse: G102 800dpi x1.00 no raw;
                 <p>Keyboard: Sayo O2C;
                 <p>Resolution: 1920x1080, 15&quot;6;
                 <p>Typing: Alternate;
