--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -26,6 +26,16 @@
                 <p>Offset: +7.
             </div>
         </div>
+
+        <div class="text-group">
+            <div class="text-child">
+                <h2>Something may useful(may change)</h2>
+
+                <p>You can try x0.3 cursor to practice your attention.
+                <p>Take a closer look at approach circle when you are streaming.
+                <p>It's a good idea to put an eye on cursor when you are playing jumps.
+            </div>
+        </div>
     </div>
 </body>
 </html>
