--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -18,20 +18,12 @@
             <div class="text-child">
                 <h2>Setup</h2>
 
-                <p>Mouse: G102 800dpi x1.00 no raw;
+                <p>Mouse: G102 800dpi no raw;
                 <p>Keyboard: Sayo O2C;
                 <p>Resolution: 1920x1080, 15&quot;6;
                 <p>Typing: Alternate;
                 <p>Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">here</a>;
                 <p>Offset: +7.
-            </div>
-        </div>
-
-        <div class="text-group">
-            <div class="text-child">
-                <h2>Yum</h2>
-
-                <p>You can try x0.3 cursor to practice your attention.
             </div>
         </div>
     </div>
