--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     </div>
 
     <div id="content">
-        <div class="text-group">
-            <div class="text-child">
-                <p>A place that store my configs and notes.
-            </div>
+        <div class="text">
+            <p>A place that store my configs and notes.
         </div>
     </div>
 </body>
