--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -14,17 +14,19 @@
 <body>
     <div id="content">
         <h1>Profile</h1>
-        <div class="text-group">
-            <div class="text-child">
-                <h2>Setup</h2>
 
-                <p>Mouse: G102 800dpi no raw;
-                <p>Keyboard: Sayo O2C;
-                <p>Resolution: 1920x1080, 15&quot;6;
-                <p>Typing: Alternate;
-                <p>Skin: <a href="https://www.mediafire.com/file/zdxviumgppcns70/Idontknow.osk/file">here</a>;
-                <p>Offset: +7.
-            </div>
+        <div class="text">
+            <h2>Setup</h2>
+
+            <p>Mouse: G102 800dpi no raw;
+            <p>Keyboard: Sayo O2C;
+            <p>Typing: Alternate;
+            <p>Skin: <a href="https://www.mediafire.com/file/zdxviumgppcns70/Idontknow.osk/file">here</a>;
+            <p>Offset: +7.
+        </div>
+
+        <div class="text">
+            <img src="../../assets/1.png" width="90%" height="90%">
         </div>
     </div>
 </body>
