--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -21,12 +21,12 @@
             <p>Mouse: G102 800dpi no raw;
             <p>Keyboard: Sayo O2C;
             <p>Typing: Alternate;
-            <p>Skin: <a href="https://www.mediafire.com/file/zdxviumgppcns70/Idontknow.osk/file">here</a>;
+            <p>Skin: osu classic;
             <p>Offset: +7.
         </div>
 
         <div class="text">
-            <img src="../../assets/1.png" width="100%" height="100%">
+            <img src="../../assets/1.png" width="100%">
         </div>
     </div>
 </body>
