--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -21,8 +21,8 @@
             <p>Mouse: G102 800dpi no raw;
             <p>Keyboard: Sayo O2C;
             <p>Typing: Alternate;
-            <p>Skin: osu classic;
-            <p>Offset: +7.
+            <p>Skin: <a href="https://www.mediafire.com/file/zdxviumgppcns70/Idontknow.osk/file">yum</a>;
+            <p>Offset: -2.
         </div>
 
         <div class="text">
