--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -22,7 +22,7 @@
             <p>Keyboard: Sayo O2C;
             <p>Typing: Alternate;
             <p>Skin: <a href="https://www.mediafire.com/file/zdxviumgppcns70/Idontknow.osk/file">yum</a>;
-            <p>Offset: -7.
+            <p>Offset: +6.
         </div>
 
         <div class="text">
