--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -21,7 +21,7 @@
             <p>Mouse: G102 800dpi no raw;
             <p>Keyboard: Sayo O2C;
             <p>Typing: Alternate;
-            <p>Skin: <a href="https://www.mediafire.com/file/zdxviumgppcns70/Idontknow.osk/file">yum</a>;
+            <p>Skin: <a href="https://www.mediafire.com/file/zdxviumgppcns70/Idontknow.osk/file">a</a>;
             <p>Offset: +6.
         </div>
 
