--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -23,6 +23,11 @@
             <p>Typing: Alternate;
             <p>Skin: download <a href="https://www.mediafire.com/file/zdxviumgppcns70/Idontknow.osk/file">here</a>;
             <p>Offset: +7.
+
+            <div class="ret"></div>
+
+            <p>Idk why lazer automatically adjust my skin.
+            <p>Changing every skin object(even its' size) will cause some serious feeling problem.
         </div>
 
         <div class="text">
