--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -21,7 +21,7 @@
             <p>Mouse: G102 800dpi no raw;
             <p>Keyboard: Sayo O2C;
             <p>Typing: Alternate;
-            <p>Skin: download <a href="https://www.mediafire.com/file/lqof6yhvu13h6h2/Idontknow.osk/file">here</a>;
+            <p>Skin: <a href="https://www.mediafire.com/file/lqof6yhvu13h6h2/Idontknow.osk/file">Idk</a>;
             <p>Offset: +6.
         </div>
 
