--- a/pages/arch/install.html
+++ b/pages/arch/install.html
@@ -19,7 +19,7 @@
     <div id="content">
         <div class="text">
             <h1>Archlinux installation</h1>
-            <h2>Notes:</h2>
+            <h2>Intro</h2>
 
             <p>Read this two official wiki:
             <a href="https://wiki.archlinux.org/title/Installation_guide">
