--- a/pages/arch/install.html
+++ b/pages/arch/install.html
@@ -26,12 +26,12 @@
                 First pre-install</a>
             <a href="https://wiki.archlinux.org/title/General_recommendations">
                 Software & Hardware Issues/Wikis</a>
-            <p>You can try <u>archinstall</u>, it's pretty simple to install the os.
+            <p>You can try <u>archinstall</u>, it's a pretty simple tool to install the os.
             <p>Be careful when executing commands.
         </div>
 
         <div class="text">
-            <h2>Connect to the internet(wireless)</h2>
+            <h2>Connect to the internet(for wireless)</h2>
 
             <p><u>ifconfig</u> to check the network card.
             <p>Here <b>wlan0</b> as default.
