--- a/pages/arch/config.html
+++ b/pages/arch/config.html
@@ -72,7 +72,7 @@
             <div class="ret"></div>
 
             <p>My config for i3:<br>
-            <p>Download <a href="../../files/fedora/config.zip">here</a> or using wget:
+            <p>Download <a href="../../files/fedora/config-files.zip">here</a> or using wget:
             <p>wget https://cutt37.github.io/files/packages/fedora/config.zip
 
             <div class="ret"></div>
