--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -19,8 +19,14 @@
             <h2>Setup</h2>
 
             <p>Mouse: G102 800dpi no raw;
+            <p id="note">(with a cherry pad, in-game acceleration: 1x)
+
             <p>Keyboard: Sayo O2C;
-            <p>Typing: Alternate(ring + index finger);
+            <p id="note">(with Leobog Greywood Switch v3)</p>
+
+            <p>Typing: Alternate;
+            <p id="note">(I'm now using ring + index finger because sometimes I cant play with middle finger when it reaches to a limbo)</p>
+
             <p>Skin: <a href="https://www.mediafire.com/file/lqof6yhvu13h6h2/Idontknow.osk/file">Idk</a>;
             <p>Offset: -6ms.
         </div>
