--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -25,7 +25,7 @@
             <p id="note">(with Leobog Greywood Switch v3)</p>
 
             <p>Typing: Alternate;
-            <p id="note">(I'm now using ring + index finger because sometimes I cant play with middle finger when it reaches to a limbo)</p>
+            <p id="note">(I'm now using ring + index finger because sometimes I cant play with middle finger when it reaches to a tipping)</p>
 
             <p>Skin: <a href="https://www.mediafire.com/file/lqof6yhvu13h6h2/Idontknow.osk/file">Idk</a>;
             <p>Offset: -6ms.
