--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -28,7 +28,7 @@
             <p id="note">(I'm now using ring + index finger because sometimes I cant play with middle finger when it reaches to a tipping)</p>
 
             <p>Skin: <a href="https://www.mediafire.com/file/lqof6yhvu13h6h2/Idontknow.osk/file">Idk</a>;
-            <p>Offset: -6ms.
+            <p>Offset: +6ms.
         </div>
 
         <div class="text">
