--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -44,7 +44,7 @@
 
             <div class="ret"></div>
 
-            <p>Task EX: a map breaks 300pp record(no farming)</p>
+            <p>Task EX: a map breaks 300pp record(without farming)</p>
             <progress value="0" max="1"></progress>
         </div>
     </div>
