--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="../../assets/main.css">
 
-    <script type="text/javascript" src="../../assets/main.js" defer></script>
+    <script type="text/javascript" src="../../assets/37.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
             <p id="note">(with Leobog Greywood Switch v3)</p>
 
             <p>Typing: Alternate;
-            <p id="note">(I'm now using ring + index finger because sometimes I cant play with middle finger when it reaches to a tipping)</p>
+            <p id="note">(I'm now using ring + index finger because sometimes I cant play with middle finger when it reaches to a tip)</p>
 
             <p>Skin: <a href="https://www.mediafire.com/file/lqof6yhvu13h6h2/Idontknow.osk/file">Idk</a>;
             <p>Offset: 0ms.
