--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -27,7 +27,7 @@
             <p>Typing: Alternate;
             <p id="note">(I'm now using ring + index finger because sometimes I cant play with middle finger when it reaches to a tip)</p>
 
-            <p>Skin: <a href="https://www.mediafire.com/file/lqof6yhvu13h6h2/Idontknow.osk/file">Idk</a>;
+            <p>Skin: <a href="https://www.mediafire.com/folder/9nwc32ol7315l/Skin">Idk</a>;
             <p>Offset: 0ms.
         </div>
 
