--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -19,13 +19,13 @@
             <h2>Setup</h2>
 
             <p>Mouse: G102 800dpi no raw;
-            <p id="note">(with a cherry pad, in-game acceleration: 1x)
+            <p id="note">cherry pad</p>
 
             <p>Keyboard: Sayo O2C;
-            <p id="note">(with Leobog Greywood Switch v3)</p>
+            <p id="note">Leobog Greywood Switch v3</p>
 
             <p>Typing: Alternate;
-            <p id="note">(I'm now using ring + index finger because sometimes I cant play with middle finger when it reaches to a tip)</p>
+            <p id="note">ring and index finger</p>
 
             <p>Skin: <a href="https://www.mediafire.com/folder/9nwc32ol7315l/Skin">Idk</a>;
             <p>Offset: 0ms.
