--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -19,13 +19,13 @@
             <h2>Setup</h2>
 
             <p>Mouse: G102 800dpi no raw;
-            <p id="note">cherry pad</p>
+            <p id="note">... on a cherry pad</p>
 
             <p>Keyboard: Sayo O2C;
-            <p id="note">Leobog Greywood Switch v3</p>
+            <p id="note">... with Leobog Greywood Switch v3</p>
 
             <p>Typing: Alternate;
-            <p id="note">ring and index finger</p>
+            <p id="note">... using ring and index finger</p>
 
             <p>Skin: <a href="https://www.mediafire.com/folder/9nwc32ol7315l/Skin">Idk</a>;
             <p>Offset: 0ms.
