--- a/pages/arch/config.html
+++ b/pages/arch/config.html
@@ -72,8 +72,8 @@
             <div class="ret"></div>
 
             <p>My config for i3:<br>
-            <p>Download <a href="../../files/fedora/config-files.zip">here</a> or using wget:
-            <p>wget https://cutt37.github.io/files/packages/fedora/config.zip
+            <p>Download <a href="../../files/fedora/config-files.cutt37">here</a> or using wget:
+            <p>wget https://cutt37.github.io/files/packages/fedora/config-files.cutt37
 
             <div class="ret"></div>
 
