--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="text">
-            <img src="../../assets/1.png" width="80%">
+            <img src="../../assets/pic/1.png" width="80%">
         </div>
     </div>
 </body>
