--- a/pages/arch/install.html
+++ b/pages/arch/install.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="../../assets/main.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/size.css">
+    
     <script type="text/javascript" src="../../assets/main.js" defer></script>
 </head>
 
