--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="../../assets/main.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/size.css">
 
     <script type="text/javascript" src="../../assets/37.js" defer></script>
 </head>
