--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -18,7 +18,7 @@
 
         <div class="text">
             <h2>Setup</h2>
-            <p>Mouse: G102 800dpi no raw;
+            <p>Mouse: G102 800dpi raw x1.4;
             <p id="note">... on a cherry pad</p>
 
             <p>Keyboard: Sayo O2C;
