--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -28,7 +28,7 @@
             <p id="note">... using ring and index finger</p>
 
             <p>Skin: <a href="https://www.mediafire.com/folder/9nwc32ol7315l/Skin">Idk</a>;
-            <p>Offset: +24ms.
+            <p>Offset: 0ms.
         </div>
 
         <div class="text">
