--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -21,14 +21,14 @@
             <p>Mouse: G102 800dpi raw x1.4;
             <p id="note">... on a cherry pad</p>
 
-            <p>Keyboard: Sayo O2C;
+            <p>Keyboard: O2C;
             <p id="note">... with Leobog Greywood Switch v3</p>
 
             <p>Typing: Alternate;
             <p id="note">... using ring and index finger</p>
 
             <p>Skin: <a href="https://www.mediafire.com/folder/9nwc32ol7315l/Skin">Idk</a>;
-            <p>Offset: -17ms.
+            <p>Offset: 0ms.
         </div>
 
         <div class="text">
