Update mouse DPI setting in profile page

--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -18,7 +18,7 @@
 
         <div class="text">
             <h2>Setup</h2>
-            <p>Mouse: G102 800dpi x1.4;
+            <p>Mouse: G102 800dpi x1.5 no raw;
             <p id="note">... on a cherry pad</p>
 
             <p>Keyboard: O2C;
